Version 0.8.17   - XX November 2005
  * Add --only option which displays warnings only for files specified
    on the command line
  * Add --evil option for users to prevent the interpreter from crashing
    due to broken C extensions
  * Fix wrong file name when warning about returning values from
    __init__ functions. (#1291116)
  * Fix a few more glitches with setup.py.
  * Suppress warning about integer division when the code is: int(x / y)
  * Add code to skip testing objects from extension modules that are
    known to crash the interpreter.  Currently, the list includes
    matplotlib.axes.BinOpType and wx.TheClipboard. Bugs have been
    files with those projects.

Version 0.8.16   - 4 September 2005
  * Fix problems installing on Windows and running setup.py build

Version 0.8.15   - 31 August 2005
  * Fix spurious warning about catching string exceptions
  * Don't barf if there is # -*- encoding: ... -*- lines and unicode strings
  * setup.py was rewritten to honor --root, --home, etc options
  * Fix internal error on processing nested scopes
  * Fix constant tuples in Python 2.4
  * Don't warn about implicit/explicit returns in Python 2.4, we can't tell
  * Fix crash when __slots__ was an instance w/o __len__
  * Fix bug that declared {}.pop to only take one argument, it takes 1 or 2
  * Fix spurious warning when using tuples for exceptions
  * Fix spurious warning <stack> / <stack> 
  * Fix spurious warnings for sets module about __cmp__, __hash__
  * Changed abstract check to require raising NotImplementedError
    rather than raising any error
  * Fix spurious warnings in Python 2.4 for Using is (not) None warnings
  * Fix spurious warnings for some instances of No class attribute found
  * Fix spurious warnings for implicit returns when using nested functions

Version 0.8.14   - 6 June 2004
  * Fix spurious warning in Python 2.3+ when doing a,b = 1,2
  * Add warning to check for "if s.find(str):"