@@ -14,6 +14,21 @@ import string
 import re
 import time
 
+def get_warning_levels():
+    import msgs, types
+    WarningClass = msgs.WarningClass
+
+    result = {}
+    for name in vars(msgs).keys():
+        obj = getattr(msgs, name)
+        if (obj is not WarningClass and
+            isinstance(obj, types.ClassType) and
+            issubclass(obj, WarningClass)):
+            result[name.capitalize()] = obj
+    return result
+
+_WARNING_LEVELS = get_warning_levels()
+
 _RC_FILE = ".pycheckrc"
 CHECKER_VAR = '__pychecker__'
 _VERSION = '0.8.17beta'
@@ -24,14 +39,10 @@ _DEFAULT_VARIABLE_IGNORE_LIST = [ '__version__', '__warningregistry__',
                                   '__author__', '__email__', '__revision__', ]
 _DEFAULT_UNUSED_LIST = [ '_', 'empty', 'unused', 'dummy', ]
 
-# All these options are on even if -e/--errors is used
-_ERRORS = { 'noEffect': 1, }
-
 _OPTIONS = (
     ('Major Options', [
  ('',  0, 'only', 'only', 'only warn about files passed on the command line'),
- ('e', 0, 'errors', None, 'turn off all warnings which are not likely errors'),
- ( '', 0, 'complexity', None, 'turn off all warnings which are related to complexity'),
+ ('e', 1, 'level', None, 'specify the maximum error level'),
  ('F', 1, 'config', None, 'specify .pycheckrc file to use'),
  ('',  0, 'quixote', None, 'support Quixote\'s PTL modules'),
  ('',  1, 'evil', 'evil', 'list of evil C extensions that crash the interpreter'),
@@ -208,6 +219,7 @@ class Config :
         self.debug = 0
         self.quiet = 0
         self.only = 0
+        self.level = 0
         self.onlyCheckInitForMembers = 0
         self.printParse = 0
         self.quixote = 0
@@ -351,14 +363,16 @@ class Config :
                     # FIXME: it would be nice to define this in only one place
                     print _VERSION
                     sys.exit(0)
+                elif longArg == 'level':
+                    normalizedValue = value.capitalize()
+                    if not _WARNING_LEVELS.has_key(normalizedValue):
+                        sys.stderr.write('Invalid warning level (%s).  '
+                                         'Must be one of: %s\n' %
+                                         (value, _WARNING_LEVELS.keys()))
+                        sys.exit(1)
 
-                self.noDocModule = 0
-                self.noDocClass = 0
-                self.noDocFunc = 0
-                if longArg == 'errors' :
-                    self.__dict__.update(errors_only())
-                elif longArg == 'complexity' :
-                    self.__dict__.update(errors_only(2))
+                    self.level = _WARNING_LEVELS[normalizedValue].level
+                    continue
             elif value  :
                 newValue = value
                 memberType = type(getattr(self, member))
@@ -385,15 +399,6 @@ class Config :
             self.variablesToIgnore.append(CHECKER_VAR)
 
         return files
-
-def errors_only(complexity = 0) :
-    "Return {} of Config with all warnings turned off"
-    dict = Config().__dict__
-    for k, v in dict.items() :
-        if type(v) == type(0) and v >= complexity and not _ERRORS.has_key(k):
-            dict[k] = 0
-    return dict
-
 
 def printArg(shortArg, longArg, description, defaultValue, useValue) :
     defStr = ''
