@@ -1,6 +1,7 @@
 #!/usr/bin/env python
 
 # Copyright (c) 2001, MetaSlash Inc.  All rights reserved.
+# Portions Copyright (c) 2005, Google, Inc. All rights reserved.
 
 """
 Warning class to hold info about each warning.
@@ -27,6 +28,7 @@ class Warning :
             line = 1
         self.line = line
         self.err = err
+        self.level = err.level
 
     def __cmp__(self, warn) :
         if warn == None :
@@ -42,4 +44,3 @@ class Warning :
 
     def output(self, stream) :
         stream.write(self.format() + "\n")
-
